公開できる？

--- a/about.html
+++ b/about.html
@@ -26,10 +26,9 @@
             <hr>
             <h2>駅名標ジェネレーターついて</h2>
             <p>現在、JR東日本の漢字主体、SE型(LED)筐体の駅名標の画像を生成することができます。バグ潰し等をしていないため、Beta版として公開しています。</p>
-            <h2>既知の問題</h2>
+            <!--<h2>既知の問題</h2>
             <ul>
-                <li>カラーピッカーで直接入力した場合、少しずれた数値になることがある</li>
-            </ul>
+            </ul>-->
         </main>
     </body>
 </html>
