--- a/index.html
+++ b/index.html
@@ -456,7 +456,7 @@
             <option value="#339966"></option>
         </datalist>
 
-        <script src="https://unpkg.com/vue" defer></script>
+        <script src="vue.min.js" defer></script>
         <script src="https://ajax.googleapis.com/ajax/libs/webfont/1.6.26/webfont.js" defer></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/lz-string/1.4.4/lz-string.min.js" defer></script>
         <script src="script.js" defer></script>
