帯色が変更できない不具合の修正

--- a/index.html
+++ b/index.html
@@ -193,7 +193,7 @@
                     </label>
                     <label>
                         <div class="label-text">この方面への帯の色</div>
-                        <input type="color" v-model="leftStations[0]">
+                        <input type="color" v-model="leftStations[0].lineColor">
                     </label>
                     <label>
                         <input
@@ -241,7 +241,7 @@
                     </label>
                     <label>
                         <div class="label-text">この方面への帯の色</div>
-                        <input type="color" v-model="leftStations[1]">
+                        <input type="color" v-model="leftStations[1].lineColor">
                     </label>
                     <label>
                         <input
@@ -289,7 +289,7 @@
                     </label>
                     <label>
                         <div class="label-text">この方面への帯の色</div>
-                        <input type="color" v-model="rightStations[0]">
+                        <input type="color" v-model="rightStations[0].lineColor">
                     </label>
                     <label>
                         <input
@@ -337,7 +337,7 @@
                     </label>
                     <label>
                         <div class="label-text">この方面への帯の色</div>
-                        <input type="color" v-model="rightStations[1]">
+                        <input type="color" v-model="rightStations[1].lineColor">
                     </label>
                     <label>
                         <input
