--- a/index.html
+++ b/index.html
@@ -39,9 +39,9 @@
                     </div>
                 </section>
                 <section>
-                    <button @click.prevent="loadFont('japanese')" :disabled="fontLoad.japanese">日本語フォントをロードする(約700KB ～ 約1.6MB)</button>
-                    <button @click.prevent="loadFont('chinese')" :disabled="fontLoad.chinese">中国語フォントをロードする(約1.5MB ～ 約2.2MB)</button>
-                    <button @click.prevent="loadFont('korean')" :disabled="fontLoad.korean">韓国語フォントをロードする(約1MB ～ 約2.1MB)</button>
+                    <button @click.prevent="loadFont('japanese')" :disabled="fontLoad.japanese">日本語フォント(M+ 1p)をロードする(約700KB ～ 約1.6MB)</button>
+                    <button @click.prevent="loadFont('chinese')" :disabled="fontLoad.chinese">中国語フォント(Noto Sans SC)をロードする(約1.5MB ～ 約2.2MB)</button>
+                    <button @click.prevent="loadFont('korean')" :disabled="fontLoad.korean">韓国語フォントを(Noto Sans KR)ロードする(約1MB ～ 約2.1MB)</button>
                 </section>
             </section>
             <!--<section class="row">
