検索時に表示される文章を追加

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
         <meta charset="UTF-8">
         <base href="index.html">
         <meta name="viewport" content="width=device-width,initial-scale=1">
+        <meta name="description" content="JR東日本の駅名標風の画像を作ることができます。駅名はもちろん、ナンバリング・スリーレターコード・4ヶ国語表記や、隣駅の分岐、複数のラインカラー、帯の色、特定都区市内表記など、さまざまな項目を設定可能です。共有URL機能で作った駅名標を手軽に共有、改造できます。">
         <title>Sigene 駅名標ジェネレーター</title>
         <link rel="icon" type="image/svg+xml" href="favicon.svg">
         <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Open+Sans:700&text=0123456789MS">
