--- a/index.html
+++ b/index.html
@@ -460,6 +460,6 @@
         <script src="vue.min.js" defer></script>
         <script src="https://ajax.googleapis.com/ajax/libs/webfont/1.6.26/webfont.js" defer></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/lz-string/1.4.4/lz-string.min.js" defer></script>
-        <script src="script.js" defer></script>
+        <script src="script_es6.js" defer></script>
     </body>
 </html>
