--- a/index.html
+++ b/index.html
@@ -456,6 +456,11 @@
             <option value="#880022"></option>
             <option value="#339966"></option>
         </datalist>
+        
+        <h6>デバッグ用</h6>
+        <p style="font-family: 'Lato';">0123456789ABCDEFGHIJKLMNOPQRSTUVWXYZ</p>
+        <p style="font-family: 'Cabin';">0123456789ABCDEFGHIJKLMNOPQRSTUVWXYZ</p>
+        <p style="font-family: 'Open Sans';">0123456789ABCDEFGHIJKLMNOPQRSTUVWXYZ</p>
 
         <script src="vue.min.js" defer></script>
         <script src="https://ajax.googleapis.com/ajax/libs/webfont/1.6.26/webfont.js" defer></script>
