--- a/index.html
+++ b/index.html
@@ -458,9 +458,9 @@
         </datalist>
         
         <h6>デバッグ用</h6>
-        <p style="font-family: 'Lato' serif;">0123456789ABCDEFGHIJKLMNOPQRSTUVWXYZ</p>
-        <p style="font-family: 'Cabin' serif;">0123456789ABCDEFGHIJKLMNOPQRSTUVWXYZ</p>
-        <p style="font-family: 'Open Sans' serif;">0123456789ABCDEFGHIJKLMNOPQRSTUVWXYZ</p>
+        <p style="font-family: 'Lato', serif;">0123456789ABCDEFGHIJKLMNOPQRSTUVWXYZ</p>
+        <p style="font-family: 'Cabin', serif;">0123456789ABCDEFGHIJKLMNOPQRSTUVWXYZ</p>
+        <p style="font-family: 'Open Sans', serif;">0123456789ABCDEFGHIJKLMNOPQRSTUVWXYZ</p>
 
         <script src="vue.min.js" defer></script>
         <script src="https://ajax.googleapis.com/ajax/libs/webfont/1.6.26/webfont.js" defer></script>
